# MysteryAgents

./: .env.example  .gitignore  LICENSE  README.md  README_START.md  README_TESTS.md  run_all_tests.sh  skills-lock.json  start.sh  stop.sh
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  characters.py  config.py  discussion.py  game.py  game_stream.py  model_configs.py  models.py  personality.py  replay.py  usage.py  user.py  werewolf.py  werewolf_stream.py
backend/config/: README.md  __init__.py  characters.yaml  prompts.yaml  settings.py  werewolf_prompts.yaml
backend/database/: __init__.py  base.py  engine.py  migrations.py  model_config.py  session.py  usage.py
backend/models/: __init__.py  agent.py  character.py  discussion.py  game.py  model_config.py  personality.py  usage.py  user.py  werewolf.py
backend/services/: agent_factory.py  character_prompt_builder.py  character_selection_service.py  character_service.py  config_export_service.py  crewai_game_service.py  discussion_factory.py  discussion_service.py  game_service.py  llm_service.py  memory_service.py  model_config_service.py  profession_generator_service.py  replay_service.py  state_service.py  usage_store.py  werewolf_replay_store.py  werewolf_report_service.py  werewolf_service.py
backend/tests/: test_full_game_llm_flow.py  test_werewolf_api.py  test_werewolf_service.py
backend/tests/integration/: test_discussion_with_characters.py  test_game_flow.py  test_sequential_speaking.py  test_sequential_via_api.py  test_streaming_api.py
backend/utils/: logger.py
frontend/: .env.example  dev_log  index.html  package-lock.json  package.json  test-app.html  vite.config.ts
scripts/: run_all_tests.sh  run_real_game_smoke.py  start.sh  (+2 more)
(+96 files in other folders)
