[project]
name = "undercover-ai-sandbox"
version = "1.0.0"
description = "《谁是卧底》多智能体社会博弈沙盒系统"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # FastAPI and Server
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    # LLM Integration
    "litellm>=1.0.0",
    # Memory Management
    "mem0ai>=0.1.0",
    "qdrant-client>=1.7.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "networkx>=3.0",
    # Multi-Agent Framework
    "crewai>=1.0.0",
    # Data Validation and Serialization
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    # Environment and Configuration
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    # WebSocket
    "websockets>=12.0",
    # Utilities
    "python-dateutil>=2.8.2",
    "aiofiles>=23.0.0",
    "loguru>=0.7.0",
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "api",
    "config",
    "database",
    "models",
    "services",
    "utils"
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
